deploy/k8s/http-server.yml
apiVersion: v1
kind: Service
metadata:
  name: sdump-api
  namespace: sdump
spec:
  ports:
  - port: 80
    targetPort: 4200
  selector:
    app: sdump-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdump-api
  namespace: sdump
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sdump-api
  template:
    metadata:
      labels:
        app: sdump-api
    spec:
      containers:
        - name: server
          image: ghcr.io/adelowo/sdump:e84a5c5f3b8724072d48f8b96f7794fb
          imagePullPolicy: Always
          ports:
            - containerPort: 4200
