deploy/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sdump-api-ingress
  namespace: sdump
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"

spec:
  tls:
  - hosts:
    - sdump.app
    secretName: sdump-api-tls
  rules:
  - host: sdump.app
    http:
      paths:
      - backend:
          service:
            name: sdump-api
            port:
             number: 80
        pathType: Prefix
        path: /

  ingressClassName: nginx
